--- a/src/Hero/Presentation.scss
+++ b/src/Hero/Presentation.scss
@@ -83,9 +83,29 @@
         right: 0;
         width: 100%;
         height: 100%;
-        transition: all .3s;
         background: linear-gradient(to bottom, #ffffff, #a7daff);
         background: -webkit-linear-gradient(to bottom, #ffffff, #a7daff);
+        
+        &:hover .round:nth-child(1) {
+            right: +50%;
+            bottom: 2rem;
+            height: 50rem; width: 50rem;
+        }
+        &:hover .round:nth-child(2) {
+            right: +50%;
+            bottom: +30%;
+            height: 50rem; width: 50rem;
+        }
+        &:hover .round:nth-child(3) {
+            left: 2rem;
+            bottom: +50%;
+            height: 50rem; width: 50rem;
+        }
+        &:hover .round:nth-child(4) {
+            right: 2rem;
+            bottom: 2rem;
+            height: 50rem; width: 50rem;
+        }
         & > .round {
             position: absolute;
             height: 30rem; width: 30rem;
@@ -96,6 +116,7 @@
             border-radius: 100%;
             background: linear-gradient(to right, #41fdc8, #40adf0);
             background: -webkit-linear-gradient(to right, #41fdc8, #40adf0);
+            transition: all 2s cubic-bezier(1,-0.3,0,1.18);
 
             &:nth-child(1) {
                 right: 2rem;
