--- a/src/SliderBox/SliderBox.scss
+++ b/src/SliderBox/SliderBox.scss
@@ -1,12 +1,13 @@
 .SliderBox {
     display: flex;
-    position: relative;
     flex-direction: column;
+    position: relative;
     align-items: center;
     justify-content: center;
     padding: 10rem 2rem;
     max-width: 100%;
     width: 100%;
+
     background-color: hsl(0, 0%, 91%);
     & > h2 {
         font-size: 5rem;
@@ -17,9 +18,9 @@
     }
     &__box {
         display: flex;
-        overflow: hidden;
-        max-width: 100%;
-        margin: 0 7rem;
+        
+        flex-wrap: wrap;
+        width: 100%;
     }
 
     &__prev, &__next {
