--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -1,11 +1,9 @@
 .Footer {
-    background-color: $dark-bg;
     padding: 3rem 7rem;
-    color: white;
     font-size: 2rem;
     width: 100%;
     text-align: center;
-    border-top: 1px solid #595959;
+    border-top: 1px solid #D7D7D7;
     &__box {
 
     }
