--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -8,9 +8,9 @@
     height: 50px;
     display: flex;
     padding: 0 3rem;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid #D7D7D7;
     border-radius: 10rem;
-    color: white;
     z-index: 99;
  
     &.mobile {
