--- a/src/aboutMe/AboutMe.scss
+++ b/src/aboutMe/AboutMe.scss
@@ -30,7 +30,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: white;
         max-width: 60%;
         height: 100vh;
         @media screen and (max-width: 640px) {
@@ -76,18 +75,18 @@
         }
     }
     &__blurredbg {
-        position: absolute;
-        z-index: 0;
-        top: 50%; left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%; height: 50rem;
-        border-radius: 500rem;
-        background: linear-gradient(90deg, $purple, #fb973f);
-        background: -webkit-linear-gradient(90deg, $purple, #fb973f);
-        filter: blur(100px);
-        -webkit-filter: blur(100px);
-        backdrop-filter: blur(100px);
-        -webkit-backdrop-filter: blur(100px);
+        // position: absolute;
+        // z-index: 0;
+        // top: 50%; left: 50%;
+        // transform: translate(-50%, -50%);
+        // width: 100%; height: 50rem;
+        // border-radius: 500rem;
+        // background: linear-gradient(90deg, $purple, #fb973f);
+        // background: -webkit-linear-gradient(90deg, $purple, #fb973f);
+        // filter: blur(100px);
+        // -webkit-filter: blur(100px);
+        // backdrop-filter: blur(100px);
+        // -webkit-backdrop-filter: blur(100px);
     }
 
 }
@@ -107,7 +106,7 @@
 
 
 .darker {
-    background-color: $dark-bg;
+    background-color: #F6F6F6;
     transition: all 5s;
 }
 
