--- a/src/contact2/Contact2.scss
+++ b/src/contact2/Contact2.scss
@@ -1,14 +1,10 @@
 .Contact2 {
     position: relative;
-    
-    background-color: $dark-bg;
-    color: white;
     display: flex;
-    overflow: hidden;
     justify-content: center;
     align-items: center;
     padding: 12rem 7rem;
-
+    overflow: hidden;
     @media screen and (max-width: 640px) {
         flex-direction: column;
         padding: 12rem 7rem;
@@ -61,18 +57,18 @@
         margin: 0 auto;
     }
     &__bluredbg {
-        position: absolute;
-        z-index: 0;
-        top: 50%; left: 50%;
-        transform: translate(-50%, -50%);
-        width: 60%; height: 100%;
-        border-radius: 500rem;
-        background: -webkit-linear-gradient(90deg,  rgba(214, 104, 248, .99), rgba(124, 22, 248, .99));
-        background: linear-gradient(90deg,  rgba(214, 104, 248, .99), rgba(124, 22, 248, .99));
-        filter: blur(100px);
-        -webkit-filter: blur(100px);
-        // backdrop-filter: blur(100px);
-        -webkit-backdrop-filter: blur(100px);
+        // position: absolute;
+        // z-index: 0;
+        // top: 50%; left: 50%;
+        // transform: translate(-50%, -50%);
+        // width: 60%; height: 100%;
+        // border-radius: 500rem;
+        // background: -webkit-linear-gradient(90deg,  $purple-lighter, $purple);
+        // background: linear-gradient(90deg,  $purple-lighter, $purple);
+        // filter: blur(100px);
+        // -webkit-filter: blur(100px);
+        // // backdrop-filter: blur(100px);
+        // -webkit-backdrop-filter: blur(100px);
     }
     &__rectangle {
         z-index: 0;
