--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -35,6 +35,7 @@ html {
     width: 100%;
     height: 100%;
     animation: fadeIn 1s linear;
+    transition: all .3s ease-in;
     overflow-x: hidden;
 }
 
