--- a/src/Hero/Presentation.scss
+++ b/src/Hero/Presentation.scss
@@ -22,6 +22,11 @@
         transform: translateX(-50%);
         width: 15rem;
         height: 15rem;
+        transition: all .5s;
+
+        &:hover {
+            opacity: .6;
+        }
         & > .circle {
             border-radius: 100%;
             border: 1px dashed $purple;
@@ -58,7 +63,30 @@
                     height: 7.5rem;
                 }
             }
+
         }
+
+        & > svg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 2rem;
+            animation: bounceUp 2s ease-in-out infinite;
+        }
+
+        @keyframes bounceUp {
+            0% {
+                transform: translate(-50%, -50%) translateY(0);
+            } 25% {
+                transform: translate(-50%, -50%) translateY(1rem);
+            } 50% {
+                transform: translate(-50%, -50%) translateY(.5rem);
+            } 100% {
+                transform: translate(-50%, -50%) translateY(0);
+            }
+        }
+
         &::before {
             position: absolute;
             top: -5rem;
@@ -165,8 +193,11 @@
             padding: 3rem;
         }
     }
+
     &__header {
-        font-size: 5rem;
+        text-align: center;
+        font-size: 9rem;
+
         font-weight: 800;
         line-height: 1.1;
         margin-bottom: 1rem;
@@ -232,13 +263,15 @@
     white-space: nowrap;
     margin-top: 3rem;
     width: 1129.62px;
-    overflow: hidden;
+
     border-right: 5px solid rgba(255,255,255,.75);
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     -webkit-box-sizing:content-box;
     box-sizing:content-box;
-    font-weight: 900;
+    font-size: 4rem;
+
+    margin-bottom: 2rem;
     background-image: linear-gradient(to right, $blueprint , $purple-lighter );
     background-image: -webkit-linear-gradient(to right, $blueprint , $purple-lighter);
     -webkit-background-clip: text;
