--- a/src/SliderBox/SliderBox.scss
+++ b/src/SliderBox/SliderBox.scss
@@ -4,10 +4,12 @@
     position: relative;
     align-items: center;
     justify-content: center;
-    padding: 10rem 2rem;
+    padding: 10rem;
     max-width: 100%;
     width: 100%;
     margin-top: 20rem;
+
+
     & > h2 {
         margin-bottom: 3rem;
         @media screen and (max-width: 640px) {
