--- a/src/SliderItem/SliderItem.scss
+++ b/src/SliderItem/SliderItem.scss
@@ -53,7 +53,7 @@
             border: 1px solid #1D1D1D;
             border-radius: 500px;
             padding: .5rem 1rem;
-            transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1); 
+            transition: all .5s; 
             @media screen and (max-width: 640px) {
                 font-size: 1.2rem;
             }           
