--- a/src/Stack/Stack.scss
+++ b/src/Stack/Stack.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 10rem 7rem;
-    
+    margin-top: 20rem;
     position: relative;
 
     & > * {
