--- a/src/Hero/Presentation.scss
+++ b/src/Hero/Presentation.scss
@@ -284,6 +284,7 @@
 }
 .heading-subtitle {
     width: 0;
+    margin: 2rem auto;
     @media screen and (max-width: 640px) {
         font-size: 2.3rem;
     }
