--- a/src/Hero/Hero.scss
+++ b/src/Hero/Hero.scss
@@ -1,22 +1,8 @@
 .Hero {
     position: relative;
     max-width: 100vw;
-
     height: 100vh;
     z-index: 2;
-    // &__video {
-    //     position: absolute;
-    //     top: 0; left: 0;
-    //     animation: fadeOutBlur 1s 10s cubic-bezier(0.075, 0.82, 0.165, .2) forwards;
-    //     width: 100%;
-    //     max-height: 100vh;
-    //     object-fit: cover;
-    //     z-index: 1000;
-        
-    //     @media screen and (max-width: 640px) {
-    //         height: 100vh;
-    //     }
-    // }
 
     &__content {
         position: absolute;
@@ -38,18 +24,10 @@
             font-size:3rem;
         }
     }
-    &__content1 {
-        animation: fadeInThenOut 3s 1s linear forwards;
-    }
-    &__content2 {
-        animation: fadeInThenOut 3s 4s linear forwards;
-    }
-    &__content3 {
-        animation: fadeInThenOut 3s 7s linear forwards;
-    }
+    
     &__presentation_box {
         opacity: 0;
-        animation: fadeInGrow 2s 10s linear forwards;
+        animation: fadeInGrow 2s linear forwards;
     }
     
 }
