[WIP]: styling again

--- a/src/Stack/Stack.scss
+++ b/src/Stack/Stack.scss
@@ -57,7 +57,7 @@
         margin: .5rem;
         font-size: 1.9rem;
         text-decoration: none;
-        transition: all 1s;
+        transition: all .5s;
         z-index: 1;
         //@include transition;
         @media screen and (max-width: 640px) {
