--- a/src/SliderBox/SliderBox.scss
+++ b/src/SliderBox/SliderBox.scss
@@ -9,59 +9,17 @@
     width: 100%;
     margin-top: 20rem;
 
-
     & > h2 {
         margin-bottom: 3rem;
+        z-index: 2;
         @media screen and (max-width: 640px) {
             font-size: 3rem;
         }
     }
     &__box {
         display: flex;
-        
-        flex-wrap: wrap;
+        flex-wrap: wrap;     
+        align-items: stretch; 
         width: 100%;
     }
-
-    &__prev, &__next {
-        font-size: 4rem;
-        border: none;
-        background-color: transparent;
-        position: absolute;
-        top: 50%;
-        transform: translate(0, 50%);
-        cursor: pointer;
-        transition: all .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        &:hover {
-            color: $blueprint;
-        }
-    }
-    &__prev {
-        left: 3rem;
-        transition: all .3s;
-        transform-origin: center;
-        @media screen and (max-width: 640px) {
-            left: 1rem;
-        }
-        
-    }
-    &__next {
-        right: 3rem;
-        transition: all .3s;
-        transform-origin: center;
-        @media screen and (max-width: 640px) {
-            right: 1rem;
-        }
-        
-    }
-
-
-}
-[class*="SliderBox__prev 1"], [class*="SliderBox__prev 0"] {
-    opacity: .3;
-    cursor: not-allowed;
-}
-[class*="SliderBox__next 5"] {
-    opacity: .3;
-    cursor: not-allowed;     
 }
