--- a/src/SliderItem/SliderItem.scss
+++ b/src/SliderItem/SliderItem.scss
@@ -1,14 +1,15 @@
 .SliderItem {
-    position: relative;
     display: flex;
     flex: 0 0 calc(50% - 2rem);
     max-width: calc(50% - 2rem);    
     flex-direction: column;
     align-items: center;
+    align-self: flex-start;
     border-radius: 1.5rem;
-    // background-color: white;
     margin: 1rem;
     border: 1px solid $border;
+    height: auto;
+
     @media screen and (max-width: 800px) {
         flex: 0 0 calc(100% - 2rem);
         max-width: calc(100% - 2rem);
@@ -95,7 +96,7 @@
         width: auto;
         z-index: 2;
         width: 100%;
-        height: 400px;
+        height: max-content;
         object-fit: cover;
         border-radius: 15px 15px 0 0;
         @media screen and (max-width: 640px) {
