--- a/src/SliderItem/SliderItem.scss
+++ b/src/SliderItem/SliderItem.scss
@@ -1,43 +1,82 @@
 .SliderItem {
+    position: relative;
     display: flex;
     flex: 0 0 calc(50% - 2rem);
     max-width: calc(50% - 2rem);    
     flex-direction: column;
     align-items: center;
-    align-self: flex-start;
     border-radius: 1.5rem;
     margin: 1rem;
-    border: 1px solid $border;
-    height: auto;
+    overflow: hidden;
+    box-shadow: 2px 4px 12px rgb(0 0 0 / 8%);
 
-    @media screen and (max-width: 800px) {
+    color: inherit;
+
+    
+    @media screen and (max-width: 1000px) {
         flex: 0 0 calc(100% - 2rem);
         max-width: calc(100% - 2rem);
     }
     
-    @media screen and (min-width: 1600px) {
-        flex: 0 0 calc(33% - 1rem);
-        max-width: calc(33% - 1rem);
+    @media screen and (min-width: 1760px) {
+        flex: 0 0 calc(33% - 2rem);
+        max-width: calc(33% - 2rem);
     }
-
+    &:hover {
+        transform: scale(1.02);
+    }
+    &:hover &__tags, &:hover &__description {
+        opacity: 1;
+    }
+    &:hover &__description, &:hover &__title {
+        color: white;
+    }
     & > * {
         z-index: 2;
     }
 
     &__title {
+        position: absolute;
+        top: 0rem;
+        left: 3rem;
         font-size: 3rem;
-        font-weight: 700;
+        color: $dark-bg;
+        z-index: 20;
+        @media screen and (max-width: 640px) {
+            font-size: 1.9rem
+        }
     }
     &__description {
+        position: absolute;
+        top: 6rem;
+        left: 3rem;
+        color: $dark-bg;
+        text-decoration: none;
         font-size: 1.7rem;
         letter-spacing: 2px;
-        text-align: center;
+        z-index: 20;
+        opacity: 0;
+        @media screen and (max-width: 640px) {
+            font-size: 1.3rem
+        }
     }
     &__tags {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to bottom, rgba(29, 29, 29, 0.6), rgba(29, 29, 29, 0.7));
+        color: white;
+        padding: 1rem;
         display: flex;
-        align-items: center;
-        z-index: 100;
-        margin: 1rem 0;
+        align-items: flex-end;
+        align-self: center;
+        justify-content: flex-end;
+        z-index: 19;
+        opacity: 0;
+        transition: all 0.3s cubic-bezier(0, 0, 0.5, 1) !important;
+
         & > span {
             margin-right: 1rem;
             font-size: 1.2rem;
@@ -48,12 +87,9 @@
         }
        
         &__tag {
-            margin-right: .5rem;
+            margin-right: 1rem;
             font-size: 1.5rem;
-            // color: #1D1D1D;
-            border: 1px solid #1D1D1D;
             border-radius: 500px;
-            padding: .5rem 1rem;
             transition: all .5s; 
             @media screen and (max-width: 640px) {
                 font-size: 1.2rem;
@@ -93,17 +129,18 @@
     }
     
     &__img {
+        position: relative;
         width: auto;
         z-index: 2;
         width: 100%;
         height: max-content;
         object-fit: cover;
-        border-radius: 15px 15px 0 0;
-        @media screen and (max-width: 640px) {
-            height: 200px;    
-        }
-        @media screen and (min-width: 1600px) {
-            height: 600px;
-        }
+        border-radius: 1.5rem;
+        // @media screen and (max-width: 640px) {
+        //     height: 200px;    
+        // }
+        // @media screen and (min-width: 1600px) {
+        //     height: 600px;
+        // }
     }
 }
