--- a/src/aboutMe/AboutMe.scss
+++ b/src/aboutMe/AboutMe.scss
@@ -7,7 +7,6 @@
         position: absolute;
         width: 100%; height: 100%; 
         object-fit: cover;  
-        // object-position: left;
         opacity: .05;
     }
     &__content {
@@ -16,15 +15,17 @@
         justify-content: center;
         padding: 10rem;
         max-width: 60%;
-        @media screen and (max-width: 640px) {
-            width: 80%;
+        
+        @media screen and (max-width: 1040px) {
+            max-width: 80%;
+            padding: 5rem 1rem;
         }
         margin: 0 auto;
 
         & > h2 {
-            width: min-content;
             @media screen and (max-width: 640px) {
                 font-size: 3rem;
+                line-height: 3rem;
             }
         }
         & > p {
