--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -34,8 +34,7 @@ html {
     width: 100%;
     height: 100%;
     animation: fadeIn 1s linear;
-    overflow-x: hidden;
-    
+    overflow: hidden;
 }
 .App.light {
     color-scheme: light;
@@ -59,19 +58,12 @@ h2 {
     margin-bottom: 2rem;
 }
 
-@mixin transition {
-    @for $i from 1 through 6 {
-        &:nth-child(#{$i}) {
-            transition: all 1s #{$i * 200}ms ease-in;
-        }
-    }  
-}
 
 .hidden {
     opacity:0;
     filter: blur(10px);
     -webkit-filter: blur(10px);
-    @include transition;
+    transition: all .3s cubic-bezier(0,0,.5,1);
 }
 
 .show {
@@ -80,7 +72,7 @@ h2 {
     filter: blur(0px);
     -webkit-filter: blur(0px);
     visibility: visible;
-    @include transition;
+    transition: all .3s cubic-bezier(0,0,.5,1);
 }
 
 .opacity-0 {
